stylesheets/styles.css
/* ... */
h1 {
  -webkit-font-smoothing: antialiased;
  /* Prevents fonts looking so bold on Mac */ }

h3 {
  margin-bottom: 10px; }

h4 {
  color: #737a7a; }

#about {
  position: relative;
  min-height: 350px; }
  #about .portrait {
    width: 250px;
    height: 250px;
    border-radius: 50%;
    background: transparent url('../img/portrait.jpg') center center no-repeat;
    background-size: cover;
    margin: 10px auto; }
    #about .portrait:before {
      content: url('../img/portrait-doodle.png');
      display: none; }
    #about .portrait:hover, #about .portrait:active {
      background-image: url('../img/portrait-doodle.png');
      cursor: pointer; }
    @media only screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
      #about .portrait {
        background-image: url('../img/portrait@2x.jpg'); }
        #about .portrait:before {
          content: url('../img/portrait-doodle.png@2x');
          display: none; }
        #about .portrait:hover, #about .portrait:active {
          background-image: url('../img/portrait-doodle@2x.png'); } }
    @media only screen and (max-width: 40em) {
      #about .portrait {
        width: 200px;
        height: 200px; } }
  @media only screen and (min-width:40.063em) {
    #about .bio {
      margin-top: 30px; } }

#projects div.row {
  margin-bottom: 10px; }
  @media only screen and (min-width:40.063em) {
    #projects div.row {
      margin-bottom: 20px; } }
#projects img {
  margin-bottom: 10px;
  border: 1px solid #dadada; }
#projects .info {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 85%;
  color: gray; }
  #projects .info span {
    color: #b52222; }
  #projects .info a {
    color: gray; }

#portfolio {
  background-color: #eeeeee; }
  #portfolio .filter-label {
    font-size: 85%;
    color: #b52222;
    padding-right: 10px; }
  #portfolio .filter {
    background-color: #dfdfdf;
    color: gray;
    font-weight: normal; }
    #portfolio .filter:hover, #portfolio .filter:active, #portfolio .filter.highlight:hover, #portfolio .filter.highlight:active {
      background-color: #cf2727; }
    #portfolio .filter.highlight {
      background-color: #b52222; }
    #portfolio .filter:hover, #portfolio .filter:active, #portfolio .filter.highlight {
      color: white; }

#portfolio-grid .portfolio-grid-item {
  padding: 0.625em;
  -webkit-transition: opacity 100ms ease-in;
  -moz-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
  -webkit-transform: translateZ(0); }
  #portfolio-grid .portfolio-grid-item.faded {
    opacity: 0.25; }
  #portfolio-grid .portfolio-grid-item:hover {
    background-color: rgba(0, 0, 0, 0.1); }
#portfolio-grid img {
  width: 100%; }
#portfolio-grid a {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-tap-highlight-color: transparent;
  /* For some Androids */ }
  #portfolio-grid a:hover {
    text-decoration: none; }
#portfolio-grid .portfolio-name {
  position: relative; }
  #portfolio-grid .portfolio-name .caption {
    margin-top: 5px;
    color: #222222;
    font-weight: bold;
    line-height: 16px; }
    @media only screen and (max-width: 40em) {
      #portfolio-grid .portfolio-name .caption {
        font-size: 14px;
        line-height: 14px; } }
  #portfolio-grid .portfolio-name .subtitle {
    font-size: 12px;
    color: #777777;
    font-weight: normal; }

#talks iframe {
  width: 100%;
  height: 100%; }

#project .slideshow-wrapper {
  min-height: 200px; }
  #project .slideshow-wrapper.legacy {
    max-width: 650px; }
#project .orbit-bullets {
  display: none; }
#project .project-title {
  margin-top: 20px; }
#project .project-data .row {
  line-height: 1.5rem; }
#project .project-data-key {
  font-size: 80%;
  text-transform: uppercase;
  color: gray; }
#project .project-description {
  margin-top: 16px; }

#resume {
  padding-top: 20px; }
  #resume .subtitle {
    margin: 0;
    font-weight: bold;
    color: gray;
    position: relative;
    top: -14px;
    left: 2px; }

#resume, #project {
  padding-bottom: 20px; }
  @media only screen and (min-width:40.063em) {
    #resume, #project {
      padding-bottom: 30px; } }

#templates {
  display: none; }

.external-link {
  font-size: 80%;
  text-transform: uppercase;
  white-space: nowrap; }

a.button {
  -webkit-transition: background-color 0s;
  -moz-transition: background-color 0s;
  transition: background-color 0s;
  box-shadow: none;
  -webkit-box-shadow: none; }
  a.button:hover, a.button:active {
    text-decoration: none; }

div.epilogue {
  color: #7b7b7b; }
  div.epilogue .quote::after {
    content: '“'; }
  div.epilogue .quote::before {
    content: '”'; }
  div.epilogue .author {
    text-transform: uppercase;
    font-size: 0.625rem;
    white-space: nowrap; }
    div.epilogue .author::before {
      content: '— '; }

.browsehappy {
  background-color: #ffffef;
  margin: 0;
  padding: 5px 20px;
  border-bottom: 1px solid lightgray;
  z-index: 9999; }

